@@ -1,46 +1,46 @@
 /*
- * $Id$
- *
- * This file is part of the iText (R) project.
-    Copyright (c) 2007-2018 iText Group NV
- * Authors: Bruno Lowagie et al.
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License version 3
- * as published by the Free Software Foundation with the addition of the
- * following permission added to Section 15 as permitted in Section 7(a):
- * FOR ANY PART OF THE COVERED WORK IN WHICH THE COPYRIGHT IS OWNED BY
- * ITEXT GROUP. ITEXT GROUP DISCLAIMS THE WARRANTY OF NON INFRINGEMENT
- * OF THIRD PARTY RIGHTS
- *
- * This program is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
- * or FITNESS FOR A PARTICULAR PURPOSE.
- * See the GNU Affero General Public License for more details.
- * You should have received a copy of the GNU Affero General Public License
- * along with this program; if not, see http://www.gnu.org/licenses or write to
- * the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
- * Boston, MA, 02110-1301 USA, or download the license from the following URL:
- * http://itextpdf.com/terms-of-use/
- *
- * The interactive user interfaces in modified source and object code versions
- * of this program must display Appropriate Legal Notices, as required under
- * Section 5 of the GNU Affero General Public License.
- *
- * In accordance with Section 7(b) of the GNU Affero General Public License,
- * a covered work must retain the producer line in every PDF that is created
- * or manipulated using iText.
- *
- * You can be released from the requirements of the license by purchasing
- * a commercial license. Buying such a license is mandatory as soon as you
- * develop commercial activities involving the iText software without
- * disclosing the source code of your own applications.
- * These activities include: offering paid services to customers as an ASP,
- * serving PDFs on the fly in a web application, shipping iText with a closed
- * source product.
- *
- * For more information, please contact iText Software Corp. at this
- * address: sales@itextpdf.com
+    * $Id$
+
+    This file is part of the iText (R) project.
+    Copyright (c) 2007-2019 iText Group NV
+    Authors: iText Software.
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU Affero General Public License version 3
+    as published by the Free Software Foundation with the addition of the
+    following permission added to Section 15 as permitted in Section 7(a):
+    FOR ANY PART OF THE COVERED WORK IN WHICH THE COPYRIGHT IS OWNED BY
+    ITEXT GROUP. ITEXT GROUP DISCLAIMS THE WARRANTY OF NON INFRINGEMENT
+    OF THIRD PARTY RIGHTS
+
+    This program is distributed in the hope that it will be useful, but
+    WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+    or FITNESS FOR A PARTICULAR PURPOSE.
+    See the GNU Affero General Public License for more details.
+    You should have received a copy of the GNU Affero General Public License
+    along with this program; if not, see http://www.gnu.org/licenses or write to
+    the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+    Boston, MA, 02110-1301 USA, or download the license from the following URL:
+    http://itextpdf.com/terms-of-use/
+
+    The interactive user interfaces in modified source and object code versions
+    of this program must display Appropriate Legal Notices, as required under
+    Section 5 of the GNU Affero General Public License.
+
+    In accordance with Section 7(b) of the GNU Affero General Public License,
+    a covered work must retain the producer line in every PDF that is created
+    or manipulated using iText.
+
+    You can be released from the requirements of the license by purchasing
+    a commercial license. Buying such a license is mandatory as soon as you
+    develop commercial activities involving the iText software without
+    disclosing the source code of your own applications.
+    These activities include: offering paid services to customers as an ASP,
+    serving PDFs on the fly in a web application, shipping iText with a closed
+    source product.
+
+    For more information, please contact iText Software Corp. at this
+    address: sales@itextpdf.com
  */
 package com.itextpdf.rups.view.models;
 
@@ -115,12 +115,11 @@ public class PdfArrayTableModel extends AbstractPdfObjectPanelTableModel {
      * @see javax.swing.table.TableModel#getValueAt(int, int)
      */
     public Object getValueAt(int rowIndex, int columnIndex) {
-        switch (columnIndex) {
-            case 0:
-                return rowIndex == array.size() ? tempValue : PdfSyntaxUtils.getSyntaxString(array.get(rowIndex, false));
-            default:
-                return null;
+        if (columnIndex == 0) {
+            if (rowIndex == array.size()) return tempValue;
+            return PdfSyntaxUtils.getSyntaxString(array.get(rowIndex, false));
         }
+        return null;
     }
 
     @Override
@@ -178,10 +177,6 @@ public class PdfArrayTableModel extends AbstractPdfObjectPanelTableModel {
         PdfObject value = parser.parseString(tempValue, parent);
 
         if (value != null) {
-            int[] options = new int[array.size() + 1];
-            for (int i = 0; i < options.length; ++i) {
-                options[i] = i;
-            }
             int index;
             while (true) {
                 String result = JOptionPane.showInputDialog(parent, "Choose array index", array.size());
@@ -190,7 +185,7 @@ public class PdfArrayTableModel extends AbstractPdfObjectPanelTableModel {
                     return;
                 }
                 try {
-                    index = new Integer(result);
+                    index = Integer.valueOf(result);
                 } catch (NumberFormatException any) {
                     LoggerHelper.warn(LoggerMessages.NOT_AN_INTEGER_INDEX, any, getClass());
                     continue;
@@ -218,8 +213,5 @@ public class PdfArrayTableModel extends AbstractPdfObjectPanelTableModel {
         fireTableRowsInserted(index, index);
     }
 
-    private void addRow(PdfObject value) {
-        addRow(array.size(), value);
-    }
 }
 
